[package]
name = "minimax_strategy"
version = "0.1.0"
authors = ["Amelia10007 <nat.horn.mk0426@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"
data_structure = {git = "https://github.com/Amelia10007/data_structure.git"}

[examples]
reversi = {path = "examples/reversi.rs"}
